# jarvis-ai-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  wallpaper.html
scripts/: download-whisper-model.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql  V2__email_calendar_cron.sql  V3__notion_github.sql  V4__email_rules.sql  V5__proactive_check.sql  V6__cron_description.sql  V7__local_llm.sql  V8__provider_chain_allow_gemini.sql
src-tauri/src/: db.rs  lib.rs  main.rs  tray.rs  wallpaper.rs
src-tauri/src/ai/: claude.rs  gemini.rs  mod.rs  openai.rs  tools.rs
src-tauri/src/ai/local/: backend.rs  context.rs  generic.rs  mod.rs  ollama.rs  prompt_inject.rs  vllm.rs
src-tauri/src/assistant/: actions.rs  briefing.rs  context.rs  mod.rs
src-tauri/src/auth/: google.rs
src-tauri/src/commands/: assistant.rs  calendar.rs  chat.rs  cron.rs  dashboard.rs  email.rs  github.rs  google_auth.rs  local_llm.rs  mod.rs  model_pull.rs  notion.rs  obsidian.rs  settings.rs  system.rs  system_check.rs  tasks.rs
src-tauri/src/integrations/: calendar.rs  github.rs  gmail.rs  mod.rs  notion.rs  obsidian.rs
src-tauri/src/scheduler/: jobs.rs  mod.rs
src-tauri/src/system/: control.rs
src-tauri/src/voice/: audio_router.rs  capture.rs  commands.rs  mod.rs  model_manager.rs  transcribe.rs  tts.rs  wake_commands.rs  wake_word.rs
(+68 files in other folders)
