[package]
name = "jarvis"
version = "0.1.0"
description = "JARVIS - Personal AI Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "jarvis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
dotenvy = "0.15"
oauth2 = { version = "4.4", features = ["reqwest"] }
tokio-cron-scheduler = "0.13"
cron = "0.12"
uuid = { version = "1", features = ["v4"] }
open = "5"
cpal = "0.17"
hound = "3.5"
shellexpand = "3"
base64 = "0.22.1"
urlencoding = "2.1.3"
whisper-rs = "0.16.0"
futures-util = "0.3"
tiktoken-rs = "0.6"
async-trait = "0.1"
tokio-util = "0.7"
cocoa = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
